--- a/Pages/_ViewImports.cshtml
+++ b/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using GenesisVolunteerPortal
-@namespace GenesisVolunteerPortal.Pages
+@using temp
+@namespace temp.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
