--- a/Examples/index.css
+++ b/Examples/index.css
@@ -2,32 +2,40 @@ body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
   height:100vh;
+  min-height: 100vh;
+  max-height: 100vh;
   display: flex;
   flex-direction: column;
 }
-
-.header {
-  display: flex;
-  flex-direction: column;
-  background-color: rgb(68, 183, 73);
-  flex:1;
-  padding-top:10px;
-  padding-bottom:10px;
-}
-
-
-#header-logo {
-  width: 200px;
-  align-self: center;
-}
-
 .header-container {
   margin: 0;
   padding: 0;
+  flex:1;
+}
+.header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: rgb(68, 183, 73);
+
+  padding-top:10px;
+  padding-bottom:10px;
+}
+#header-logo {
+  width: 200px;
+}
+#header-title{
+  font-size:1.5em;
+  font-weight: bold;
+  color:white;
+}
+#profile-nav{
+  align-self:center;
+  margin-left: auto;
 }
 
 #main-nav{
-  outline:1px black solid;
+  border:1px black solid;
 }
 
 ul {
@@ -43,13 +51,19 @@ ul li {
   width: 100%;
   padding: 10px;
   text-align: center;
+  background-color:white;
+
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 /*  background-color: rgb(68, 183, 73); */
 ul li a{
     color:inherit;
     text-decoration: none;
     cursor: pointer;
-    font-size:1em;
+    font-size:0.8em;
 }
 
 .main-container {
@@ -65,6 +79,10 @@ ul li a{
   flex-direction: column;
   border:1px black solid;
   border-top:none;
+  background-image:url("https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fw0.fast-meteo.com%2Flocationmaps%2FBeaconsfield.10.gif&f=1&nofb=1");
+  background-repeat: no-repeat;
+  background-size: cover;
+  
 }
 
 .map{
@@ -82,18 +100,19 @@ ul li a{
     align-self: center;
     margin:15px;
     margin-left:0;
-    margin-right:0;
+    margin-right:0;    
 }
 
 .map-nav-item{
     margin:5px;
     border:1px black solid;
+    
 }
   
 .secondary-container {
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
+  align-items: center;  
   flex:1;
   border-bottom:1px black solid;  
   
@@ -114,8 +133,13 @@ ul li a{
 
 #twitter-feed {
   width: 100%;
+  text-align: center;
 }
 
+.active{
+  font-weight:bold;
+  font-size:1.5em;
+}
 
 
 
