--- a/Examples/index.css
+++ b/Examples/index.css
@@ -80,8 +80,8 @@ ul li a{
   border:1px black solid;
   border-top:none;
   background-image:url("https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fw0.fast-meteo.com%2Flocationmaps%2FBeaconsfield.10.gif&f=1&nofb=1");
-  background-repeat: no-repeat;
-  background-size: cover;
+  
+  background-size: contain;
   
 }
 
