--- a/Examples/index.css
+++ b/Examples/index.css
@@ -38,14 +38,6 @@ body {
   border-bottom:1px white solid;
 }
 
-#main-nav{
-
-}
-
-.main-nav-item{
-  /*background-color: white;*/
-}
-
 ul {
   list-style-type: none;
   padding: 0;
@@ -94,11 +86,12 @@ ul li:hover{
     display: flex;
     flex-direction: row;
     flex:3;
+    color:rgb(90, 223, 90);
 }
 
 .map-container{
   flex:5;
-
+  color:inherit;
   display: flex;
   flex-direction: column;
   border-top:none;
@@ -131,7 +124,7 @@ ul li:hover{
 
 .map-nav-item{
     margin:5px;
-    outline:1px grey solid;
+    border:1px grey solid;
 
     
 }
@@ -146,20 +139,35 @@ ul li:hover{
   flex-direction: column;
   align-items: center;  
   flex:1;
-  
+  /*background-color: rgb(90, 223, 90);*/
+  color: rgb(68, 183, 73);
+  /*color:white;*/
 }
 
 .noti-container {
   width:100%;
   height: 200px;
-
+  color:inherit;
   display:flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
 
   font-weight: bold;
-  font-size:2em;
+  font-size:1em;
+
+  margin:10px;
+
+  
+}
+
+.noti-container span{
+  font-size:1.5em;
+  outline: 3px white solid;
+  padding: 5px;
+}
+
+.noti-container p{
 }
 
 #twitter-feed {
@@ -200,4 +208,11 @@ ul li:hover{
 .hide{
   display:none;
   
+}
+
+.new-content-alert{
+  outline: none;
+  border:1px grey solid;
+  border-bottom:6px rgb(216, 56, 56) groove;
+  font-size: 1.25em;
 }
