--- a/Examples/index.css
+++ b/Examples/index.css
@@ -13,6 +13,7 @@ body {
 
   display: flex;
   flex-direction: column;
+  box-shadow: 0 8px 7px -7px rgba(83, 88, 83, 1);
 }
 .header {
   display: flex;
@@ -26,6 +27,7 @@ body {
 #header-logo {
   width: 200px;
 }
+
 #header-title{
   font-size:1.5em;
   font-weight: bold;
@@ -54,6 +56,8 @@ ul li {
   padding: 10px;
   text-align: center;
   background-color:rgb(68, 183, 73);
+  /*border-right:1px white solid;*/
+
 
   display:flex;
   flex-direction: column;
@@ -102,7 +106,7 @@ ul li:hover{
   
 }
 
-.map{
+.map{  
   flex:1;
 
   display:flex;
@@ -120,7 +124,8 @@ ul li:hover{
     margin-right:0;    
     cursor:pointer;
     color:white;
-    
+    /*border:3px black groove;*/
+
 }
 
 .map-nav-item{
@@ -142,10 +147,12 @@ ul li:hover{
   flex:1;
   /*background-color: rgb(90, 223, 90);*/
   color: rgb(68, 183, 73);
+  background-color: rgba(87, 161, 91, 0.1);  
   /*color:white;*/
 }
 
 .noti-container {
+  flex:1;
   width:100%;
   height: 200px;
   color:inherit;
@@ -163,12 +170,19 @@ ul li:hover{
 }
 
 .noti-container span{
-  font-size:1.5em;
-  outline: 3px white solid;
+  font-size:1.25em;
+  /*outline: 3px white solid;*/
   padding: 5px;
 }
 
-.noti-container p{
+.noti-container div{
+  flex:1;
+  display:flex;
+  flex-direction: column;
+}
+
+.noti-container ul li{
+  font-size: 1em;  
 }
 
 #twitter-feed {
@@ -181,6 +195,13 @@ ul li:hover{
   justify-content: center;
 }
 
+.noti-container ul{
+  flex:1;
+  flex-direction: column;
+  align-items:center;
+  justify-content: space-evenly;
+}
+
 .footer-container{
   background-color: rgb(68, 183, 73);
   flex:0.5;
@@ -189,7 +210,7 @@ ul li:hover{
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
 
   font-size: 1em;
   
@@ -214,7 +235,7 @@ ul li:hover{
 .new-content-alert{
   outline: none;
   border:1px grey solid;
-  border-bottom:6px rgb(216, 56, 56) groove;
+  border-top:3px rgb(216, 56, 56) solid;
   font-size: 1.25em;
 }
 
