--- a/ClientApp/src/components/NavigationBar.css
+++ b/ClientApp/src/components/NavigationBar.css
@@ -261,4 +261,12 @@ ul li:hover{
   .main-container{
     flex-direction: column;
   }
+  .header{
+    flex-direction:column;
+    align-items: center;
+    justify-content: center;
+  }
+  #profile-nav{
+    margin-left:0;
+  }
 }
