Update React Components: Styling and Naming Changes
Changed stylesheet linking method
(Changed from javascript file import to linking through HTML component)

--- a/ClientApp/src/components/login.css
+++ b/ClientApp/src/components/login.css
@@ -10,7 +10,8 @@ body{
     display: flex;
     flex-direction: row;
     background-image: linear-gradient( rgb(68, 183, 73), rgb(68, 183, 73), rgb(10, 115, 117)); 
-    width:100%;
+    width:100vw;
+    height:100vh;
 }
 
 .logo-container{
