--- a/MattSignUp/signup.css
+++ b/MattSignUp/signup.css
@@ -3,51 +3,68 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     height:100vh;
     display: flex;
-    background-color: rgb(217, 255, 245);
+    background-color: rgb(68, 183, 73);
     flex-direction: column;
 }
 
+.super{
+    display: flex;
+    flex-direction: column;
+}
 .input-text{
-    margin-left: 130;
-    margin-top: 20;
+    margin-top: 10;
+    width: 20%;
+    border: 30px white solid;
+    align-self: center;
     display: flex;
     flex-direction: column;
     font-size: 35px;
-    
+    background-color: rgb(255, 255, 255);
     
 }
+
+.input-text ul{
+    align-self: center;
+}
+
 
 ul{
     list-style-type: none;
     padding: 0;
     margin: 0;
+    width: 80%;
     display: flex;
     flex-direction: row;
     
     
 }
+/**
 ul li {
     width: 30%; 
     text-align: left;
 }
-
+**/
 li{
     align-self: center;
+    font-size: 14px;
 }
+
 input{
     margin: 3px;
-    margin-left: 400px;
     height:30px;
-    position: absolute;
-    
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
 }
 
 .header-container{
     margin-left: 10;
     margin-top: 20;
-    width: 100%;
+    
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
 }
 
 
@@ -61,7 +78,7 @@ input{
 }
 
 #header-logo{
-    align-self: right;
+    align-self: center;
     width: 300px;
 }
 
@@ -71,11 +88,26 @@ input{
 }
 
 .foot-button{
-    margin-left: 225;
-    margin-top: 20;
+    align-self: center;
     border:1px black solid;
+    margin-top: 5px;
     font-size: 20px;
+    display: flex;
+    flex-direction: column;
 }
 .foot-text{
     margin-left: 130;
+}
+
+.b{
+    align-self: center;
+    
+}
+
+.button{
+    display: flex;
+    flex-direction: column;
+}
+#text{
+    font-size: 35px;  
 }
