--- a/MattSignUp/signup.css
+++ b/MattSignUp/signup.css
@@ -12,6 +12,7 @@ body {
     flex-direction: column;
 }
 .input-text{
+    box-shadow: 5px 5px rgb(0, 72, 81), 3px 3px rgb(0, 72, 81), 2px 2px rgb(0, 72, 81);
     margin-top: 10;
     width: 20%;
     border: 30px white solid;
@@ -20,7 +21,7 @@ body {
     flex-direction: column;
     font-size: 35px;
     background-color: rgb(255, 255, 255);
-    
+    border-radius: 10px;
 }
 
 .input-text ul{
@@ -29,6 +30,7 @@ body {
 
 
 ul{
+    
     list-style-type: none;
     padding: 0;
     margin: 0;
@@ -45,18 +47,21 @@ ul li {
 }
 **/
 li{
+    
     align-self: center;
     font-size: 14px;
 }
 
 input{
-    margin: 3px;
+    box-shadow: 3px 3px rgb(10, 115, 117), 2px 2px rgb(10, 115, 117), 1px 1px rgb(10, 115, 117);
+    margin: 6px;
     height:30px;
     width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
+    outline:none;
 }
 
 .header-container{
@@ -78,6 +83,7 @@ input{
 }
 
 #header-logo{
+    
     align-self: center;
     width: 300px;
 }
@@ -88,13 +94,38 @@ input{
 }
 
 .foot-button{
+    box-shadow: 3px 3px rgb(0, 72, 81), 2px 2px rgb(0, 72, 81), 1px 1px rgb(0, 72, 81);
+    
     align-self: center;
-    border:1px black solid;
-    margin-top: 5px;
-    font-size: 20px;
+    
+    margin-bottom: 2px;
+    font-size: 15px;
     display: flex;
     flex-direction: column;
+    border-radius: 10px;
+    padding: 10px;
+    width: 80%;
+    text-align: center;
+    background-color: rgb(10, 115, 117);
+ 
 }
+
+.foot-button:active {
+    box-shadow: 1px 1px rgb(0, 72, 81), 1px 1px rgb(0, 72, 81), 1px 1px rgb(0, 72, 81);
+    align-self: center;
+    font-size: 15px;
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+    padding: 10px;
+    width: 80%;
+    margin-left: 2px;
+    margin-top: 2px;
+    margin-bottom: 0px;
+    text-align: center;
+    background-color: rgb(10, 115, 117);
+}
+
 .foot-text{
     margin-left: 130;
 }
@@ -105,9 +136,20 @@ input{
 }
 
 .button{
+    
+    
+    margin-top: 10px;
+    color: whitesmoke;
     display: flex;
     flex-direction: column;
 }
+
+
 #text{
     font-size: 35px;  
+}
+
+.info{
+    margin-left: 10px;
+    margin-top: 10px;
 }
