--- a/Examples/profile-page/profile.css
+++ b/Examples/profile-page/profile.css
@@ -57,7 +57,6 @@ ul li {
     background-color:rgb(68, 183, 73);
     /*border-right:1px white solid;*/
   
-  
     display:flex;
     flex-direction: column;
     align-items: center;
@@ -90,18 +89,19 @@ ul li:hover{
     display: flex;
     flex-direction: row;
     flex:3;
-    color:rgb(90, 223, 90);
 }
 
-.profile{
+.image-container{
     background-color: rgb(217 255 245);
 
-    margin: 0;
-    padding: 50;
+    padding-top: 40;
+    padding-left: 40;
 
     align-items: center;
     flex-direction: row;
-    flex:3;
+    flex:1;
+
+    width: 30%;
 }
 
 #profile-image{
@@ -112,6 +112,10 @@ ul li:hover{
 
     max-width: 100%;
     height: auto;
+
+    align-items: center;
+    flex-direction: row;
+    flex:1;
 }
 #profile-image:hover{
     opacity: 0.5;
@@ -119,13 +123,28 @@ ul li:hover{
 }
 
 .edit-image {
-    position: relative;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     font-size: 18px;
     
-  }
+}
+
+.personal-details-container{
+    background-color: rgb(217 255 245);
+
+    /*background-color: rgb(000);*/
+
+    padding-left: 0;
+    padding-top: 60;
+
+    align-items: center;
+    flex-direction: row;
+    flex:5;
+
+}
+
+.personal-details{
+    padding: 5;
+}
+
 
 .footer-container{
     background-color: rgb(68, 183, 73);
