--- a/Examples/policy.css
+++ b/Examples/policy.css
@@ -1,95 +1,26 @@
-body{
-    display: flex;
-    flex-direction:row;
-    font-family: Arial, Helvetica, sans-serif;
-
-    margin: 0;
-}
-
-.main-container{
-    
-    display: block;
-    
-    background-color: rgb(68, 183, 73);
-    width:100%;
-}
 
 .policy-container{
     
-    display: flex;
-    flex-direction: column;
+   
     background-color: white;
     width: 100% 
-    
-
-}
-
-
-
-
-.logo-container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-}
-
-#header-logo{
-    padding-top: 40px;
-    width: 300px;
-}
-
-
-
-button{
-    background-color: rgb(10,115,117);
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    font-size: 14px;
-    border-radius: 4px;
-    border: none;
-    cursor: pointer;
-    width: 100%;
-}
-
-button:hover{
-    background-color: rgb(68, 183, 73);
-}
-
-ul{
-    display: flex;
-    flex-direction: column;
-    padding: 0;
-    margin: 50px;
-    margin-top: 60px;
-    margin-bottom: 60px;
-    list-style-type: none;
-}
-
-block{
+    color: rgb(0, 72, 81);
     display: inline;
-   
-    padding: 0;
-    margin: 500px;
-    
-    list-style-type: none;
+
 }
 
-#login-tag{
-    font-size: 16px;
-    font-weight: 600;
-    padding-bottom: 15px;
+.content-container{
+    width:100%;
 }
 
-#forgot-password-tag{
-    padding-top: 25px;
-    font-size: 12px;
-    font-style: italic;
-    text-align: right;
+.policy-type1{
+    width:100%;
+    background-color: white;
+}
+.policy-type2{
+    width:100%;
+    background-color: rgb(233, 232, 232);
 }
 
-#forgot-password-tag:hover{
-    color: darkblue;
-    font-size: 13px;
-}
+
+
