--- a/ClientApp/src/components/login.css
+++ b/ClientApp/src/components/login.css
@@ -80,15 +80,19 @@ ul{
 }
 
 #forgot-password-tag{
-    padding-top: 20px;
+    margin-bottom: -30px;
+    margin-top: 25px;
     font-size: 12px;
     font-style: italic;
     text-align: right;
 }
 
 #sign-up-tag{
+    color: rgb(8, 60, 61);
     font-size: 14px;
     font-weight: bold;
+    align-self: center;
+    padding-top: 4px;
 }
 
 #sign-up-tag:hover{
