--- a/project-page/projects-main-page.css
+++ b/project-page/projects-main-page.css
@@ -32,7 +32,28 @@
     border-bottom:1px white solid;
   }
   
-  ul {
+  
+  .main-list {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    transition:0.3s ease-in-out;
+  }
+
+  .foot-list {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    transition:0.3s ease-in-out;
+  }
+
+  .head-list {
     list-style-type: none;
     padding: 0;
     margin: 0;
@@ -48,13 +69,11 @@
     padding: 10px;
     text-align: center;
     background-color:rgb(68, 183, 73);
-    /*border-right:1px white solid;*/
+
+    /*border-right:1px black solid;*/
   
-  
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+
+    
   
     cursor: pointer;
     color:white;
@@ -90,44 +109,16 @@
 .content-container{
   background-color: rgb(217, 255, 245, 0.2);
   display: flex;
+  flex-direction: column;
   height: 100%;
-
 }
 
 
-#profile-picture{
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-top: 10px;
-    width: 25vw;
 
-    vertical-align: top;
-    display: inline-block;
-    text-align: center;
-}
 
-#pp-caption{
-  font-family: "Scanno", sans-serif;
 
-  margin-left: 10px;
-  font-size: 20px;
-  font-weight: bold;
-  display: block;
-}
 
-.project-description{
-  font-size: 20;
-  width: 50vw;
-  margin: 5px;
-  display: flex;
-  flex-direction: row;
-  justify-content: right;
-  font-family: "Scanno", sans-serif;
-  color: rgb(0, 72, 81);
-  position: fixed;
-  text-align: center;
-  font-weight: 500;
-}
+
 
 .active{
     font-weight: bold;
@@ -163,15 +154,48 @@ bottom: 0;
 width: 100%;
 position: fixed;
 }
- 
-.text{
-    display: flex;
-    flex-direction: column;
-    width: 75%;
-    text-align: center;
-    
+
+.text-containter{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  text-align: center;
+  font-size: 20px;
 }
 
-.a{
-   
+.text-content{
+  margin-top: 10px;
+  width: 80%;
+  align-self: center;
 }
+
+
+
+.projects{
+  list-style-type: none;
+  padding: 0;
+  
+  width: 75%;
+  margin-left: 12.5%;
+  margin-bottom: 850px;
+}
+
+.project{
+  margin-top: 5px;
+  width: 33%;
+  float: left;
+  padding: 0px;
+  background-color: white;
+  color: black;
+ 
+}
+
+.photo{
+  margin-bottom: 5px;
+}
+
+.project-box{
+  margin-right: 5px;
+  border: 2px black solid;
+}
+
