--- a/ClientApp/src/components/login.css
+++ b/ClientApp/src/components/login.css
@@ -62,10 +62,11 @@ button:hover{
     text-align: right;
 }
 
-#forgot-password-tag:hover{
-    color:grey;
-}
 
-img, #forgot-password-tag{
-    cursor:pointer;
+a{
+    color:initial;
+}
+a:hover{
+    color:initial;
+    text-decoration: none;
 }
