Update Toasts, Boilerplate, Dashboard, Login

--- a/ClientApp/src/components/login.css
+++ b/ClientApp/src/components/login.css
@@ -23,8 +23,10 @@ button:hover{
 
 .main-container{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     background-image: linear-gradient( rgb(68, 183, 73), rgb(68, 183, 73), rgb(10, 115, 117)); 
+    align-items: center;
+    justify-content: space-evenly;
     width:100vw;
     height:100vh;
 }
@@ -37,8 +39,7 @@ button:hover{
 }
 
 #header-logo{
-    padding-top: 45px;
-    width: 300px;
+    width: 20%;
 }
 
 #sign-up-tag{
