--- a/ClientApp/src/components/toast.css
+++ b/ClientApp/src/components/toast.css
@@ -5,17 +5,13 @@
 
     background-color:rgba(255, 255, 255, 0.7);
     color:white;
-    font-weight: bold;
+    font-weight: bold;    
 
-    width: 20%;
-    left:50%;
-    margin-left:-10%;
-
-    margin-top:10px;
+    margin-top:20px;
 
     text-align: center;
 
-    transition: all 1s ease-in-out;
+    transition: all 0.2s ease-in-out;
 
     box-shadow: 0px 7px 2px -2px rgba(255, 255, 255, 0.836);
     font-size: 1.5em;
@@ -23,6 +19,20 @@
     border-radius: 6px;
         
 }
+
+.toast_:hover{
+    cursor: pointer;    
+}
+
+.hidden{
+    opacity: 0;
+    margin-top:-100px;
+}
+
+.show{
+    opacity: 1;
+}
+
 
 .positive{
     background-color: rgba(28, 255, 28, 0.7) !important;
