--- a/ClientApp/src/components/login.css
+++ b/ClientApp/src/components/login.css
@@ -23,10 +23,8 @@ button:hover{
 
 .main-container{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     background-image: linear-gradient( rgb(68, 183, 73), rgb(68, 183, 73), rgb(10, 115, 117)); 
-    align-items: center;
-    justify-content: space-evenly;
     width:100vw;
     height:100vh;
 }
@@ -39,7 +37,8 @@ button:hover{
 }
 
 #header-logo{
-    width: 20%;
+    padding-top: 45px;
+    width: 300px;
 }
 
 #sign-up-tag{
