Changed policy;Removed stuff tab from nav bar

--- a/ClientApp/src/components/policy.css
+++ b/ClientApp/src/components/policy.css
@@ -16,13 +16,13 @@
 .policy-type1{
     color: rgb(0, 72, 81);
     width:100%;
-    background-color: white;
+    background-color: rgb(233, 232, 232);;
     padding-left: 1%;
     padding-bottom: 2%;
 }
 .policy-type2{
     width:100%;
-    background-color: rgb(233, 232, 232);
+    background-color: white;
     padding-left: 1%;
     padding-bottom: 2%;
 }
