--- a/ClientApp/src/components/help.css
+++ b/ClientApp/src/components/help.css
@@ -2,6 +2,8 @@
     background-color: white;
     color: green;
     width:100%;
+    padding-left: 2%;
+    margin-left: 2%;
    
 }
 
@@ -18,6 +20,7 @@ h4 {
     border-color: black;
     border-width: 2px;
     background-color: rgb(231, 231, 231);
+    padding-left: 1%;
   }
 h5 {
     display: block;
@@ -28,6 +31,7 @@ h5 {
     margin-right: 0;
     font-weight: bold;
     color:green;
+    padding-left: 1%;
   }
 
 h3{
@@ -36,6 +40,7 @@ h3{
     border-top-style: groove;
     border-bottom-style: groove;
     border-width: 4px;
+    padding-left: 1%;
     
 }
 
@@ -46,6 +51,7 @@ h1{
     text-size-adjust: 2.5em;
     background-color: rgb(231, 231, 231);
     color:black;
+    padding-left: 1%;
 
 }
  
