--- a/ClientApp/src/components/toast.css
+++ b/ClientApp/src/components/toast.css
@@ -7,7 +7,6 @@
     color:white;
     font-weight: bold;
 
-    width: 20%;
     left:50%;
     margin-left:-10%;
 
@@ -15,13 +14,18 @@
 
     text-align: center;
 
-    transition: all 1s ease-in-out;
+    /*transition: all 0.4s ease-in-out;*/
+    transition: all 0.4s ease-in-out;
 
     box-shadow: 0px 7px 2px -2px rgba(255, 255, 255, 0.836);
     font-size: 1.5em;
     border:6px rgba(255, 255, 255, 0.836) solid;
     border-radius: 6px;
-        
+    cursor: pointer;       
+}
+
+.toast_:hover{
+    opacity: 0.9;
 }
 
 .positive{
@@ -34,4 +38,8 @@
     background-color: rgba(255, 0, 0, 0.7) !important;
     color:white;
     box-shadow: 0px 7px 2px -2px #ff000096;
+}
+
+.hidden{
+    margin-top: -500px;
 }
