--- a/Roles/roles.css
+++ b/Roles/roles.css
@@ -1,22 +1,48 @@
-.main-container{
+.big-ol-container{
     display: inline;
+    background-color:#b9f5d8;
 }
 
 .filter-contianer{
   padding: 0;
   margin: 10px;
+
   display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: center;
 }
 
 .filter-holder{
-  display: flex;
+  margin: 10px;
+  float: left;
 }
 
 .display-roles{
-  display: flex;
   flex-direction: row;
+  
+}
+
+.apply-button{
+  background-color: #004851;
+  color: white;
+  border-radius: 10px;
+  padding: 8px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.apply-button:hover,
+.apply-button:focus {
+  background-color: #0a7375;
+}
+
+.potential-roles{
+  display: flex;
+  width: 70vw;
+}
+
+.roles-holder{
+  display: inline;
 }
 
 #distance-butt{
@@ -42,6 +68,7 @@
 /* Start of dropdown css */
 /* Dropdown Button */
 .dropbtn {
+  border-radius: 5px;
   background-color: rgba(68, 183, 73, 1);
   color: white;
   padding: 16px;
@@ -92,3 +119,32 @@
 }
 
 /* End of dropdown stuff */
+
+/* Exandable roles stuff */
+.collapsible {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  margin-top: 15px;
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active, .collapsible:hover {
+  background-color: #ccc;
+}
+
+/* Style the collapsible content. Note: hidden by default */
+.content {
+  padding: 0 18px;
+  display: none;
+  overflow: hidden;
+  background-color: #f1f1f1;
+  text-align: center;
+}
+/* End of expandable stuff */
