--- a/ClientApp/src/components/Noticeboard.css
+++ b/ClientApp/src/components/Noticeboard.css
@@ -1,23 +1,37 @@
 .noticeboard{
     width:100%;
+    margin-top:80px;
 }
 
 .notice-container{
-    font-size: 0.5em;    
+    font-size: 0.35em;    
     display: flex;
     flex-direction: row;
     width: 100%;
     flex:1;
     align-items: center;
+    margin: 10px 0px;
 
 }
 
 .notice-header{
-    border: 1px black solid;
     display: flex;
     flex-direction: column;
+    flex:0.25;
+    text-align: center;
+    border-right:2px green solid;
 }
 
 .notice-body{
+    flex:1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
+    margin-left:20px;
+    margin-right:20px;
+}
 
+.notice-body p{
+    margin:0;
 }
