Fixed profile page

--- a/ClientApp/src/components/profile.css
+++ b/ClientApp/src/components/profile.css
@@ -110,9 +110,21 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-right: 1%;
 }
 
-ul {list-style-type: none;} 
+ul {
+  /* removes style sheet clashes*/
+  display: block;
+  list-style-type: disc;
+  margin-top: 1em;
+  margin-bottom: 1 em;
+  margin-left: 0;
+  margin-right: 0;
+  padding-left: 40px;
+  
+  
+  list-style-type: none;} 
 body {font-family: Verdana, sans-serif;}
 
 /* Month header */
@@ -124,11 +136,30 @@ body {font-family: Verdana, sans-serif;}
 
 /* Month list */
 .month ul {
+/* removes style sheet clashes*/
+display: block;
+list-style-type: none;
+margin-top: 1em;
+margin-bottom: 1 em;
+margin-left: 0;
+margin-right: 0;
+padding-left: 40px;
+
+
+
+
+
   margin: 0;
   padding: 0;
 }
 
 .month ul li {
+  display: list-item;
+  width: auto;
+  padding: 0px;
+  
+
+  
   color: white;
   font-size: 20px;
   text-transform: uppercase;
@@ -137,18 +168,33 @@ body {font-family: Verdana, sans-serif;}
 
 /* Previous button inside month header */
 .month .prev {
+  display: list-item;
+
   float: left;
   padding-top: 10px;
 }
 
 /* Next button */
 .month .next {
+  display: list-item;
+
   float: right;
   padding-top: 10px;
 }
 
 /* Weekdays (Mon-Sun) */
 .weekdays {
+/* removes style sheet clashes*/
+display: block;
+list-style-type: disc;
+margin-top: 1em;
+margin-bottom: 1 em;
+margin-left: 0;
+margin-right: 0;
+padding-left: 40px;
+
+
+
   margin: 0;
   padding: 10px 0;
   background-color:#ddd;
@@ -156,6 +202,9 @@ body {font-family: Verdana, sans-serif;}
 }
 
 .weekdays li {
+  display: list-item;
+  background-color:#ddd;
+
   display: inline-block;
   width: 13%;
   color: #666;
@@ -164,6 +213,16 @@ body {font-family: Verdana, sans-serif;}
 
 /* Days (1-31) */
 .days {
+/* removes style sheet clashes*/
+display: block;
+list-style-type: disc;
+margin-top: 1em;
+margin-bottom: 1 em;
+margin-left: 0;
+margin-right: 0;
+padding-left: 40px;
+
+
   padding: 10px 0;
   background: #eee;
   margin: 0;
@@ -171,6 +230,8 @@ body {font-family: Verdana, sans-serif;}
 }
 
 .days li {
+  background: #eee;
+
   list-style-type: none;
   display: inline-block;
   width: 13%;
@@ -185,4 +246,19 @@ body {font-family: Verdana, sans-serif;}
   padding: 5px;
   background: rgb(68, 183, 73);
   color: white !important
+}
+
+.days li:hover{
+  color: #777;
+  background-color: #eee
+}
+
+.weekdays li:hover{
+  color: #666;
+  background-color: #ddd
+}
+
+.month ul li:hover{
+  background: rgb(68, 183, 73);
+  color: white;
 }
