--- a/ClientApp/src/components/Noticeboard.css
+++ b/ClientApp/src/components/Noticeboard.css
@@ -2,9 +2,11 @@
     margin-top: 100px;
     width:100%;
     margin-top:80px;
+    
 }
 
 .notice-container{
+    user-select: none;
     font-size: 0.35em;    
     display: flex;
     flex-direction: row;
@@ -20,6 +22,10 @@
     box-shadow: 0px 0px 10px 2px rgba(7, 77, 78, 0.6);
     height: 100%;
     background-color: rgba(244, 253, 251, 0.9);
+}
+
+.notice-container:hover{
+    opacity: 0.8;
 }
 
 .notice-header{
@@ -52,4 +58,22 @@
 
 .title{
     text-decoration: underline;
+    text-align: center;
+}
+
+@media (max-width: 600px){
+    .notice-container{
+        flex-direction: column;
+        box-shadow: none;        
+        margin:10px 40px;
+    }
+    .notice-header{
+        border-right: none;
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+    }
+    .notice-body{
+        padding:0;
+        text-align: center;
+    }
 }
