--- a/ClientApp/src/components/Settings-page.css
+++ b/ClientApp/src/components/Settings-page.css
@@ -9,10 +9,9 @@
     transition:inherit;
     display:flex;
     width:33.3333333333333333333333333333%;
-    padding: 10px;
+  
     text-align: left;
-    background-color: rgb(233, 232, 232);
-    
+    background-color: rgb(233, 232, 232);  
     
     box-shadow: 0 8px 7px -7px rgba(83, 88, 83, 1);
     
@@ -26,7 +25,6 @@
 
 .radiot{
   transition:inherit;
- 
   display:flex;
   width:33.3333333333333333333333333333%;
   padding: 10px;
@@ -102,4 +100,9 @@ input[type="radio"]{
 
  a{
    color:rgb(68, 183, 73);
+ }
+
+ #title{
+   margin-left: 30%;
+   margin-right:30%;
  }
