--- a/ClientApp/src/components/NavigationBar.css
+++ b/ClientApp/src/components/NavigationBar.css
@@ -113,19 +113,9 @@ ul li:hover{
     background-color: white;
 }
 
-.map-container{
-  flex:5;
-  color:inherit;
-  display: flex;
-  flex-direction: column;
-  border-top:none;
-  /*background-image:url("https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fw0.fast-meteo.com%2Flocationmaps%2FBeaconsfield.10.gif&f=1&nofb=1");*/
-  
-  background-size: contain;
-  
-}
 
-.content-container{  
+
+.content{  
   flex:1;
 
   display:flex;
