--- a/ClientApp/src/components/map.css
+++ b/ClientApp/src/components/map.css
@@ -13,15 +13,15 @@
     font-size: 0.8em !important;
 }
 
-#main-map-nav{
-    position: relative;
+#main-map-nav{    
     display: flex;
     flex-direction: row;
+    flex:1;
     z-index: 2;
     width: 100%;
     height: 100%;
-    align-items: flex-end;
-    justify-content: center;
+    align-items: center;
+    justify-content: flex-end;
 }
 #main-ul{
     display: flex;
