--- a/ClientApp/src/components/map.css
+++ b/ClientApp/src/components/map.css
@@ -21,13 +21,14 @@
     width: 100%;
     height: 100%;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: flex-start;
 }
 #main-ul{
     display: flex;
     flex-direction: column !important;
     align-items: center;
     justify-content: center;
+    border: none;
 }
 
 #main-ul li{
@@ -63,8 +64,9 @@
 
 #side-ul,#main-ul{
     background-color: rgba(54, 54, 54, 0.182);
+    border:1px transparent solid;
     border-radius: 5px;
-    padding:15px;
+    margin:15px;
     display: flex;
     list-style-type: none;
     align-items: center;
@@ -75,15 +77,10 @@
 #side-ul li,#main-ul li{
     margin:0 10px;    
     font-size: inherit;
+    justify-content: space-around;
 }
 
 /*rgba(244, 253, 239, 0.882);*/
-button{
-    background-color: white;
-    border-radius: 3px;
-    padding: 10px;
-    box-shadow: none;
-}
 
 #search-input{
     padding:5px;
@@ -101,3 +98,52 @@ button{
     flex-direction: column !important;
 }
 
+
+.infowindow-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;    
+}
+
+.infowindow-title{
+    
+    text-transform: uppercase;
+    text-decoration: black underline;
+    font-size: 1em;
+    padding-bottom: 3px;
+    font-weight: bold;
+}
+
+.infowindow-body{
+    font-style: italic;
+    color:rgb(68,183,73);  
+}
+
+.infowindow-socials{
+    
+    list-style-type: none;
+    padding: 0;
+    font-weight: bold;
+    
+}
+
+.infowindow-socials li a{
+    text-transform: uppercase;
+    color:rgb(0,72,81);
+}
+
+.clear-button{
+    background-color: rgba(255,255,255,0.89);
+    margin:0 !important;
+    padding:6px !important;
+    border: none;
+    border-radius: 5px;
+}
+
+
+@media (max-width: 600px){
+    #main-map-nav{
+        justify-content: center;
+        margin-top:100%;
+    }
+}
