--- a/ClientApp/src/components/map.css
+++ b/ClientApp/src/components/map.css
@@ -152,6 +152,10 @@
     display: flex;
     flex-direction: column !important;
 }
+.results-container:hover{
+    background-color: initial !important;
+}
+
 
 .result{
     margin:0 !important;
