--- a/ClientApp/src/components/Noticeboard.css
+++ b/ClientApp/src/components/Noticeboard.css
@@ -39,6 +39,7 @@
     color: black;
     background-color: rgba(68, 183, 73, 0.2);
     border-radius: 8px;
+    width: 100%;
     border-right: 2px rgb(7, 77, 78) solid;
 }
 
