--- a/ClientApp/src/components/profile.css
+++ b/ClientApp/src/components/profile.css
@@ -3,6 +3,8 @@
     flex-direction: row;
     margin:20px;
 }
+img { max-width: 100%; max-height: 100%; }
+input { display: none; }
 
 .image-container{
     display: flex;
@@ -14,6 +16,16 @@
 .image-container:hover{
     visibility: visible;
 }
+.mv-daynames-table{
+  background-color: white;
+}
+.view-cap{
+  
+}
+.view-container-border{
+  background-color: white;
+}
+
 .profile-image{
     border: 1px solid rgb(0 72 81);
     border-radius: 4px;
