--- a/ClientApp/src/components/Noticeboard.css
+++ b/ClientApp/src/components/Noticeboard.css
@@ -1,8 +1,14 @@
+@keyframes fadein{
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
 .noticeboard{
     margin-top: 100px;
     width:100%;
     height:100%;
     margin-top:80px;
+    animation: fadein 0.5s;
     
 }
 
@@ -23,6 +29,7 @@
     box-shadow: 0px 0px 10px 2px rgba(7, 77, 78, 0.6);
     height: 100%;
     background-color: rgba(244, 253, 251, 0.9);
+    animation: fadein 0.8s;
 }
 
 .notice-container:hover{
