--- a/ClientApp/src/components/NavigationBar.css
+++ b/ClientApp/src/components/NavigationBar.css
@@ -113,19 +113,9 @@ ul li:hover{
     background-color: white;
 }
 
-.map-container{
-  flex:5;
-  color:inherit;
-  display: flex;
-  flex-direction: column;
-  border-top:none;
-  /*background-image:url("https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fw0.fast-meteo.com%2Flocationmaps%2FBeaconsfield.10.gif&f=1&nofb=1");*/
-  
-  background-size: contain;
-  
-}
 
-.map{  
+
+.content{  
   flex:1;
 
   display:flex;
@@ -133,9 +123,10 @@ ul li:hover{
   align-items: center;
   justify-content: center;
   font-size:4em;  
+  background-color: rgba(68, 183, 73,0.8);
 }
 
-#map-nav{
+#content-nav{
     position: absolute;
     z-index: 4; 
     width:30%;
@@ -144,16 +135,14 @@ ul li:hover{
     margin-left:0;
     margin-right:0;    
     cursor:pointer;
-    color:white;
+    color:white;    
     /*border:3px black groove;*/
 
 }
 
 .map-nav-item{
     margin:5px;
-    border:1px grey solid;
-
-    
+    border:1px grey solid;    
 }
 .map-nav-item:hover{
   outline-width: 1px;
@@ -251,8 +240,11 @@ ul li:hover{
 }
 
 .hide{
-  display:none;
-  
+  display:none;  
+}
+
+.hide-button{
+  width:50%
 }
 
 .new-content-alert{
@@ -260,6 +252,32 @@ ul li:hover{
   border:1px grey solid;
   border-top:3px rgb(216, 56, 56) solid;
   font-size: 1.25em;
+}
+
+.visibility-toggle{
+  z-index: 10;
+  position: absolute;
+  margin:10px;
+  width: 10%;
+  transition:inherit;
+  text-align: center;
+  background-color:rgb(68, 183, 73);
+  box-shadow: none;
+  opacity: 0.8;
+  /*border-right:1px white solid;*/
+
+  cursor: pointer;
+  color:white;
+  font-size: 0.5em;
+  width: 40px;
+  height: 40px;
+  transform: rotate(45deg);
+  text-transform: capitalize;  
+  transition: all 0.5s ease-in-out;
+}
+
+.visibility-toggle active{
+  transform: rotate(0deg);
 }
 
 @media (max-width: 600px){
