--- a/ClientApp/src/components/Noticeboard.css
+++ b/ClientApp/src/components/Noticeboard.css
@@ -1,10 +1,19 @@
+@keyframes fadein{
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
 .noticeboard{
     margin-top: 100px;
     width:100%;
+    height:100%;
     margin-top:80px;
+    animation: fadein 0.5s;
+    
 }
 
 .notice-container{
+    user-select: none;
     font-size: 0.35em;    
     display: flex;
     flex-direction: row;
@@ -18,8 +27,12 @@
     margin-bottom: 10px;
     color: black;
     box-shadow: 0px 0px 10px 2px rgba(7, 77, 78, 0.6);
-    height: 100%;
     background-color: rgba(244, 253, 251, 0.9);
+    animation: fadein 0.8s;
+}
+
+.notice-container:hover{
+    opacity: 0.8;
 }
 
 .notice-header{
@@ -32,7 +45,11 @@
     color: black;
     background-color: rgba(68, 183, 73, 0.2);
     border-radius: 8px;
-    border-right: 2px rgb(7, 77, 78) solid;
+    width: 100%;
+    border: 2px rgb(7, 77, 78) solid;
+    border-left:none;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
 }
 
 .notice-body{
@@ -52,4 +69,23 @@
 
 .title{
     text-decoration: underline;
+    text-align: center;
+}
+
+@media (max-width: 600px){
+    .notice-container{
+        flex-direction: column;
+        box-shadow: none;        
+        margin:10px 40px;
+    }
+    .notice-header{
+        border-right: none;
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+    }
+    .notice-body{
+        padding:0;
+        margin:0 10px;
+        text-align: center;
+    }
 }
