--- a/ClientApp/src/components/LoginForm.css
+++ b/ClientApp/src/components/LoginForm.css
@@ -1,13 +1,7 @@
 .login-container{
-    position: fixed;
-    padding: 0;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     background-color: white;
     box-shadow: 0px 0px 15px 5px rgb(7, 77, 78);
     border-radius: 4px;
-    
     
 }
 
@@ -59,4 +53,10 @@ ul{
 
 #forgot-password-tag:hover{
     color:grey;
+}
+
+@media (max-width: 600px){
+    .login-container{
+        width: 80%;
+    }
 }
