Update Maps, Toasts and Various Pages

--- a/ClientApp/src/components/ForgotPasswordForm.css
+++ b/ClientApp/src/components/ForgotPasswordForm.css
@@ -5,11 +5,6 @@
 }
 
 .forgot-password-container{
-    position: fixed;
-    padding: 0;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     background-color: white;
     box-shadow: 0px 0px 15px 5px rgb(7, 77, 78);
     border-radius: 4px;
@@ -65,4 +60,10 @@ ul li a{
 
 img{
     cursor:pointer;
+}
+
+@media (max-width: 600px){
+    .forgot-password-container{
+        width: 80%;
+    }
 }
